// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests.js 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
if (a) { b = 2; } else { b = 3; }

if (a) {
    b = 2;
} else {
    b = 3;
}

if (a) {
    b = 2;
}
else {
    b = 3;
}

do {
    b++;
} while (a)

try {
    a = 1;
} catch (error) {
    console.error(error);
} finally {
    b = 2;
}

try {
    a = 1;
}
catch(error) {
    console.error(error);
}
finally {
    b = 2;
}
=====================================output=====================================
if (a) {
  b = 2;
} else {
  b = 3;
}

if (a) {
  b = 2;
} else {
  b = 3;
}

if (a) {
  b = 2;
} else {
  b = 3;
}

do {
  b++;
} while (a);

try {
  a = 1;
} catch (error) {
  console.error(error);
} finally {
  b = 2;
}

try {
  a = 1;
} catch (error) {
  console.error(error);
} finally {
  b = 2;
}

================================================================================
`;

exports[`tests.js 2`] = `
====================================options=====================================
braceStyle: "stroustrup"
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
if (a) { b = 2; } else { b = 3; }

if (a) {
    b = 2;
} else {
    b = 3;
}

if (a) {
    b = 2;
}
else {
    b = 3;
}

do {
    b++;
} while (a)

try {
    a = 1;
} catch (error) {
    console.error(error);
} finally {
    b = 2;
}

try {
    a = 1;
}
catch(error) {
    console.error(error);
}
finally {
    b = 2;
}
=====================================output=====================================
if (a) {
  b = 2;
}
else {
  b = 3;
}

if (a) {
  b = 2;
}
else {
  b = 3;
}

if (a) {
  b = 2;
}
else {
  b = 3;
}

do {
  b++;
} while (a);

try {
  a = 1;
}
catch (error) {
  console.error(error);
}
finally {
  b = 2;
}

try {
  a = 1;
}
catch (error) {
  console.error(error);
}
finally {
  b = 2;
}

================================================================================
`;
